# offineline-signature-verification-using-two-channel-network

./: CMakeLists.txt  README.md  SigNet_v1.py  SignatureDataGenerator.py  cv.cpp
